--- a/src/app/camera-details/camera-details.component.html
+++ b/src/app/camera-details/camera-details.component.html
@@ -1,1 +1,16 @@
-<p>camera-details works!</p>
+<div class="d-flex justify-content-center container mt-4">
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>{{camera.name}}</h3>
+
+            <div class="card border-dark mb-3" style="max-width: 18em;">
+                <div class="card-header"><h4>Model: {{camera.model}}</h4></div>
+                <div class="card-body text-dark">
+                  <p class="card-title">Resolution: {{camera.resolution}}</p>
+                  <p class="card-text">Ip address: {{camera.ip}}</p>
+                </div>
+              </div>
+
+        </div>
+    </div>
+</div>
