--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
     
             <a class="p-2" routerLink="/cameras-list" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact:true}">My Cameras</a>
             <a class="p-2" routerLink="/create-camera" routerLinkActive="is-active">Add new camera</a>
-            
+            <a class="p-2" routerLink="/chart" routerLinkActive="is-active">Resolution chart</a>
             
         </nav>
       
