--- a/src/app/cameras-list/cameras-list.component.html
+++ b/src/app/cameras-list/cameras-list.component.html
@@ -31,5 +31,21 @@
               </tr>
             </tbody>
         </table>
+
+        <div class="d-flex justify-content-center" >
+          <pagination 
+            [boundaryLinks]="true" 
+            [totalItems]="this.totalCount"
+            (pageChanged)="onPageChanged($event)"
+            [itemsPerPage]="this.cameraParams.pageSize"
+            previousText="&lsaquo;"
+            nextText="&rsaquo;" 
+            firstText="&laquo;" 
+            lastText="&raquo;"
+          >
+ 
+          </pagination>
+       </div>
+
     </div>
 </div>
