--- a/src/app/cameras-list/cameras-list.component.html
+++ b/src/app/cameras-list/cameras-list.component.html
@@ -32,7 +32,7 @@
             </tbody>
         </table>
 
-        <div class="d-flex justify-content-center" >
+        <div class="d-flex justify-content-center" *ngIf="this.totalCount > 0">
           <pagination 
             [boundaryLinks]="true" 
             [totalItems]="this.totalCount"
